# SpaghettiKart

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.wasm  testc.wasm  testlua.wasm  vcpkg.json
.github/workflows/: main.yml
courses/: all_course_data.h  all_course_model.h  all_course_offsets.h  all_course_packed.h
courses/Prison/: grass.c  grass.h  track.c  track.h
courses/banshee_boardwalk/: course_data.c
courses/bowsers_castle/: course_data.c
courses/choco_mountain/: course_data.c
courses/dks_jungle_parkway/: course_data.c
courses/frappe_snowland/: course_data.c
courses/harbour/: ship_model.c
courses/koopa_troopa_beach/: course_data.c  course_offsets.c
courses/mario_raceway/: course_displaylists.c
courses/moo_moo_farm/: course_data.c
docs/: BUILDING.md  faq.md
enhancements/: flycam.patch
include/: actor_types.h  common_structs.h  course_offsets.h  defines.h  gbi_extra.h  macros.h  mk64.h  objects.h  vehicles.h
mods/: test.c  test.py
mods/python/: Cargo.toml  compile.sh
mods/python/src/: lib.rs
src/: animation.c  camera.c  code_800029B0.c  code_800029B0.h  code_80005FD0.c  code_80005FD0.h  code_8003DC40.c  code_80057C60.c  code_80057C60.h  code_8006E9C0.c  code_80086E70.c  code_80091750.c  code_80091750.h  effects.c  effects.h  gbiMacro.c  kart_dma.c  kart_dma.h  main.c  main.h  math_util_2.c  menu_items.c  menu_items.h  menus.c  menus.h  player_controller.c  render_objects.c  render_objects.h  render_player.c  render_player.h  save.c  spawn_players.c  staff_ghosts.c  update_objects.c  update_objects.h
wasm/: test.c
(+347 files in other folders)
