[package]
name = "rust"
version = "0.1.0"
authors = ["coco875 <pereira.jannin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustpython = { git = "https://github.com/RustPython/RustPython", default-features = false, version = "0.4.0", features = [
    "freeze-stdlib",
] }
wasm-bindgen = "0.2.93"
